--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/cannon": "^6.6.0",
     "@react-three/drei": "^10.6.1",
     "@react-three/fiber": "^9.3.0",
     "@react-three/postprocessing": "^3.0.4",
     "@tailwindcss/vite": "^4.1.11",
     "bootstrap": "^5.3.7",
+    "cannon-es": "^0.20.0",
     "postprocessing": "^6.37.7",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
